syntax = "proto3";
package chess_server;

service Match {
  rpc MovePiece (MoveRequest) returns (MoveResponse);
}

message MoveRequest {
  string match_id = 1;
  string pgn_move = 2;
  string player_color = 3;
}

message MoveResponse {
  string match_id = 1;
  bool success = 2;
  string board_state = 3;  
}